	* fs/fs_fcntl.c and net/net_vfcntl.c: Minimal support provided for fcntl().
	  It can, at least, be used to mark sockets as blocking or non-blocking.
	* net/net_close.c: Fix bug in close().  If reference count not set to zero
	  then uip_tcpfree() will assert when DEBUG is enabled.
	* net/accept.c: Fix bug in accept().  The logic expected parts of the
	  return address structure to be initialized or it would return an error.

0.4.11 2009-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* fs/fs_read.c and fs/fs_write.c.  read() and write() to socket is the
	  same as recv() and send() with flags = 0.  Fixed!
	* net/recvfrom.c: Fix errors in return value from non-blocking socket read.
	* lib/lib_strcasecmp.c and lib/lib_strncasecmp.c.  Use of post-incremented
	  argument to macro caused strcasecmp() and strncasecmp() to fail.
	* lib/lib_strstr.c:  Length of substring off by one causes false alarm
	  sub-string matches.
	* arch/arm/src/lm3s/lm3s_ethernet.c: Fix errors in LMS6918 FIFO length
	  handling.  (1) The incorrect size of the ethernet header was being
	  subtracted on outgoing messages (4 vs 14), which caused outgoing messages to
	  be a little too long.  (2) The size of incoming FIFO messages is 6 bytes
	  larger than it expected (2 for the length and 4 for the FCS).  The unhandled
	  extra two bytes of length cause the driver to sometimes read one too many
	  words from the received FIFO (corrupting the next queued receive packet,
	  if any).
	* net/net_poll.c and net/uip/uip_tcpbacklog.c.  Fixed an important race condition
	  bug in polling for connections.  The logic worked if the poll was inplace
	  before the connection was received; but the poll failed to awaken if the
	  connection was already pending in the backlog when poll() was called.
	* net/net_close.c.  Fixed another important TCP/IP race condition bug:  If
	  the host closes the TCP connection just before the target calls close(), then
	  the close operation may hang indefinitely!