@@ -1524,6 +1524,9 @@ nuttx-0.4.11 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* net/net_close.c.  Fixed another important TCP/IP race condition bug:  If
 	  the host closes the TCP connection just before the target calls close(), then
 	  the close operation may hang indefinitely!
+	* net/net_tcppoll.c.  Removed an unnecessary check for outstanding, un-ACKed
+	  data.  The NuttX socket layer keeps track of ACKs and doesn't need this check;
+	  removing the check should improve write throughput
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
